Revert "Fixed fonts tomfoolery and image align in mobile (about-me)"
This reverts commit a38b1e10f7310e8db1581bcc0fe1d80bfa8d7ceb.

--- a/src/app/components/templates/aboutMeTemplate/aboutMeTemplate.module.css
+++ b/src/app/components/templates/aboutMeTemplate/aboutMeTemplate.module.css
@@ -11,12 +11,6 @@
     max-width: 330px;
 }
 
-.mobile{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 .mobile > p:nth-child(2){
     color: var(--primary-color);
 }
